--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
     </main>
     
     <footer>
-        <p>Sarnaavho Pal(23) | 3rd Year CSE(AIML) | 12022002016036 | IEM, Kolkata</p>
+        <p>Sarnaavho Pal(23) | 3rd Year CSE(AIML) | 2022-26 | 12022002016036 | IEM, Kolkata</p>
     </footer>
     
     <script src="script.js"></script>
