--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
         </div>
         
         <div class="card">
-            <h2>About RC2 Encryption</h2>
+            <h2>About RC2-CBC Mode</h2>
             <p>RC2 is a block cipher with a 64-bit block size and variable key size. This demo uses RC2 in CBC mode, which requires an initialization vector (IV).</p>
             <p>The process works as follows:</p>
             <ol>
